# merian-plugin-quake

./: .gitmodules  meson.build  quake.json
res/shader/: quake-material.slang  quake-material.slangh  quake_sky.slang
src/: plugin.cpp
src/game/: quake_draw.frag  quake_draw.frag.spv.c  quake_draw.frag.spv.h  quake_draw.hpp  quake_draw.vert  quake_draw.vert.spv.c  quake_draw.vert.spv.h  quake_env_map.hpp  quake_extraction.cpp  quake_extraction.hpp  quake_material.hpp  quake_meshes.hpp  quake_node.cpp  quake_node.hpp  quake_scene.cpp  quake_scene.hpp  quake_ui_node.cpp  quake_ui_node.hpp
